# my-eyes

./: .env.example  .gitignore  AGENTS.md  README.md  RULE.md  main.py  pyproject.toml  requirements.txt
.codex/skills/coding-standards/: SKILL.md
.codex/skills/prompt-optimizer/: SKILL.md
.codex/skills/python-testing/: SKILL.md
.codex/skills/safety-guard/: SKILL.md
.github/workflows/: monthly-uptime-report.yml  ssl_monitor.yml  unit-tests.yml
config/: ssh_folder_downloader.example.json  targets.example.json
scripts/: __init__.py  monthly_uptime_report.py  ssh_folder_downloader.py  ssl_monitor.py
sql/: schema.sql
src/uptime_monitor/: __init__.py  __main__.py  checkers.py  cli.py  config.py  logging_utils.py  models.py  scheduler.py  service.py  validation.py  web_health.py
src/uptime_monitor/storage/: __init__.py  base.py  postgres.py
tests/: test_checkers.py  test_cli_health_server.py  test_config.py  test_logging_utils.py  test_monthly_uptime_report.py  test_ssh_folder_downloader.py  test_ssl_monitor.py  test_validation.py  test_web_health.py
