[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uptime-monitor"
version = "0.1.0"
description = "Server uptime/availability monitor with PostgreSQL-backed history"
requires-python = ">=3.11"
dependencies = ["psycopg[binary]>=3.2"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
uptime-monitor = "uptime_monitor.cli:main"
