[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monitoring-utilities"
version = "0.1.0"
description = "Utility scripts for UptimeRobot reporting and SSL certificate monitoring"
requires-python = ">=3.11"
dependencies = ["paramiko>=3.4"]
